--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -4,21 +4,25 @@ source "https://rubygems.org"
 
 gem "activesupport"
 gem "bundler"
+gem "chunky_png"
 gem "debug"
+gem "faraday"
 gem "gem-ctags"
 gem "guard"
 gem "guard-bundler"
 gem "guard-minitest"
+gem "guard-rubocop"
+gem "libnotify"
+gem "matplotlib"
 gem "minitest", "~> 5.15"
 gem "minitest-reporters"
 gem "mocha"
+gem "numo-narray"
+gem "rainbow"
 gem "rake"
 gem "rubocop"
 gem "rubocop-minitest"
 gem "rubocop-performance"
 gem "rubocop-rake"
-gem "webmock"
-
-gem "matplotlib"
-gem "numo-narray"
 gem "torch-rb"
+gem "webmock"
